--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,11 @@ serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
-env_logger= "0.9"
-log = "0.4"
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
+secrecy = { version = "0.8", features = ["serde"] }
 
 [dependencies.sqlx]
 version = "0.7.0"
@@ -36,3 +37,6 @@ features = [
     "chrono",
     "migrate"
 ]
+
+[dev-dependencies]
+once_cell = "1"
