--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ name = "zero2prod"
 actix-web = "4"
 config = "0.13.3"
 reqwest = "0.11.18"
-serde = { version = "1", features = ["derive"] }
+serde = "1.0.115"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
