--- a/spec.yaml
+++ b/spec.yaml
@@ -32,12 +32,10 @@ services:
         scope: RUN_TIME
         value: ${newsletter.DATABASE}
 databases:
-  # PG = Postgres
-  - engine: PG
-    # Database name
+  - cluster_name: zero2prod
+    db_user: postgres
     name: newsletter
-    # Again, let's keep the bill lean
-    num_nodes: 1
-    size: db-s-dev-database
-    # Postgres version - using the latest here
-    version: "14"
+    production: false
+    engine: PG
+    db_name: newsletter
+    version: 14
