--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4"
 config = "0.13.3"
-reqwest = "0.11.18"
 serde = "1.0.115"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1", features = ["v4"] }
@@ -42,9 +41,15 @@ features = [
     "migrate"
 ]
 
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+features = ["json", "rustls-tls"]
+
 [dev-dependencies]
 once_cell = "1"
 claims = "0.7"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+wiremock = "0.5"
